--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
  <body>
     <header></header>
     <main class="apresentacao">
-      <h1>
-         Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong>
-      </h1>
-      ><p>
-         Olá! 
-         <br>
-         Sou João Pedro, desenvolvedor de software com conhecimentos em Java e C#, maior expertise
-         em Java, possuo conhecimento em diversar tecnologias, como: 
-         <strong class="tecnologias-destaque">
-            Selenium Web Driver, Git, PL SQL, MY SQL, Spring Boot
-            Hibernate, JPA, Entity Framework, .NET Web Api.
-            Conhecimento em SOLID e em criação de API REST.
-         </strong>
-      </p>
+      <section class="apresentacao__conteudo">
+         <h1 class="apresentacao__conteudo__titulo">
+            Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong>
+         </h1>
+         ><p class="apresentacao__conteudo__paragrafo">
+            Olá! 
+            <br>
+            Sou João Pedro, desenvolvedor de software com conhecimentos em Java e C#, maior expertise
+            em Java, possuo conhecimento em diversar tecnologias, como: 
+            <strong class="tecnologias-destaque">
+               Selenium Web Driver, Git, PL-SQL, MY SQL, Spring Boot,
+               Hibernate, JPA, Entity Framework, .NET Web Api.
+               Conhecimento em SOLID e em criação de API REST.
+            </strong>
+         </p>
+         <div class="apresentacao_botoes">
+            <a class="apresentacao_botoes_link" href="https://github.com/joaopepe10">GITHUB</a>
+            <a class="apresentacao_botoes_link" href="https://www.linkedin.com/in/joaopepb/">LINKEDIN</a>
+         </div>
+      </section>
       <img src="image.png" alt="Foto de perfil de algum desenvolvedor">
-      <br>
-      <a href="https://github.com/joaopepe10">GITHUB</a>
-      <a href="https://www.linkedin.com/in/joaopepb/">LINKEDIN</a>
     </main>
     <footer></footer>
  </body>
