--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
                Conhecimento em SOLID e em criação de API REST.
             </strong>
          </p>
+         <br>
          <div class="apresentacao_botoes">
+            <h2>Minhas redes: </h2>
             <a class="apresentacao_botoes_link" href="https://github.com/joaopepe10">GITHUB</a>
             <a class="apresentacao_botoes_link" href="https://www.linkedin.com/in/joaopepb/">LINKEDIN</a>
+            <a class="apresentacao_botoes_link" href="https://www.linkedin.com/in/joaopepb/">INSTAGRAM</a>
          </div>
       </section>
       <img src="image.png" alt="Foto de perfil de algum desenvolvedor">
